--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,7 +12,7 @@ html {
 /* school icon */
 .school-icon {
   text-align: center;
-  color:#FFB400
+  color: #ffb400;
 }
 
 /* popup */
@@ -27,7 +27,7 @@ html {
 /* popup background and border */
 .leaflet-popup-content-wrapper {
   background-color: #f9f9f9;
-  border: 2px solid #008A51; /* match marker fill */
+  border: 2px solid #008a51; /* match marker fill */
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   /* min-width: clamp(200px, 80vw, 300px); */
@@ -35,9 +35,8 @@ html {
 
 /* popup arrow tip */
 .leaflet-popup-tip {
-  background-color: #008A51;
+  background-color: #008a51;
 }
-
 
 /* popup animation */
 .leaflet-popup-content-wrapper {
@@ -55,10 +54,11 @@ html {
   }
 }
 
+/* popup text */
 .popup-content h3 {
   font-size: 16px;
   margin: 0 0 5px;
-  color: #008A51;
+  color: #008a51;
 }
 
 .popup-content p {
@@ -100,7 +100,9 @@ html {
   }
 } */
 
-.carousel-photo, .carousel-video {
+/* photo or video */
+.carousel-photo,
+.carousel-video {
   max-width: 100%;
   max-height: 100%;
   object-fit: contain; /* contain to maintain aspect ratio */
@@ -110,6 +112,7 @@ html {
   position: relative;
 }
 
+/* prev, next, play / pause buttons */
 /* position: absolute to place controls on photos */
 .carousel-controls {
   position: absolute;
@@ -134,36 +137,29 @@ html {
   color: #0085a1;
 }
 
-/* .carousel-photo {
-  visibility: hidden;
-  opacity: 0;
-  transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
-}
-
-.carousel-photo.active {
-  visibility: visible;
-  opacity: 1;
-} */
-
-/* added css for legend below */
+/* legend */
 .custom-legend {
   background-color: white;
   font-size: 12px;
   padding: 10px;
+  padding-bottom: 0px;
   border: 5px solid #ffd700;
   border-radius: 5px;
+  line-height: 1.5;
 }
 
-.legend-title {
+.custom-legend h4 {
   font-weight: bold;
-  margin-bottom: 10px;
+  margin: 0 0 10px 0;
+  text-decoration: underline;
 }
 
 .legend-color {
-  width: 24px;
-  height: 24px;
+  width: 12px;
+  height: 12px;
   display: inline-block;
-  margin-right: 10px;
+  border-radius: 50%;
+  margin-right: 8px;
 }
 
 .legend-mini-text {
