--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,14 @@
-body {
-  padding: 0;
-  margin: 0;
-}
-
 #map,
 body,
 html {
+  padding: 0;
+  margin: 0;
+  width: 100%;
   height: 100%;
+  /* background-color: #333333; */
+  background: url('../images/eclipse_banner.jpg') repeat-y top center;
+  /* background-size: 100vw; */
+  background-size: cover;
 }
 
 /* school icon */
@@ -31,6 +33,8 @@ html {
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   /* min-width: clamp(200px, 80vw, 300px); */
+  /* max-height: 400px; */
+  overflow-y: auto; /* scrollbar if content is too tall */
 }
 
 /* popup arrow tip */
